<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:card_view="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_marginLeft="5dp"
	android:layout_marginRight="5dp"
	android:layout_marginTop="5dp"
	card_view:cardCornerRadius="5dp">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@android:color/white"
		android:orientation="horizontal">

		<ImageView
			android:id="@+id/img_row"
			android:layout_width="60dp"
			android:layout_height="60dp"
			android:layout_margin="7dp"
			android:contentDescription="@string/thumbnail"
			android:src="@drawable/thumb_1_0"/>

		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:orientation="vertical">
			<TextView
				android:id="@+id/tvTitle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="5dp"
				android:text="@string/title"
				android:textColor="#616161"
				android:textSize="15sp"
				android:textStyle="bold"/>

			<TextView
				android:id="@+id/tvSubTitle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="0dp"
				android:text="@string/title"
				android:textColor="@android:color/darker_gray"
				android:textSize="15sp"
				android:textStyle="bold"/>

			<TextView
				android:id="@+id/tvDescription"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="1dp"
				android:text="@string/description"
				android:textSize="10sp"
				android:textStyle="italic"/>

			<ProgressBar
				style="?android:attr/progressBarStyleHorizontal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/activegoalprogressBar"
				/>


		</LinearLayout>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<TextView
				android:id="@+id/tvTimeInterval"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/title"
				android:textColor="@android:color/darker_gray"
				android:layout_margin="5dp"
				android:textSize="15sp"
				android:textStyle="bold"/>
			<android.support.v7.widget.SwitchCompat
				android:id="@+id/tvIsCurrentlyTracked"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@android:color/transparent"
				android:button="@null"
				android:padding="2dp"
				android:checked="false"/>

			<TextView
				android:id="@+id/tvProgressDescription"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:layout_gravity="bottom|right"
				android:text="@string/title"
				android:textColor="@android:color/darker_gray"
				android:textSize="12sp"
				android:textStyle="bold"/>
		</LinearLayout>

	</LinearLayout>

</android.support.v7.widget.CardView>

